winners, settings pages

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -60,3 +60,5 @@ ng-form {
 @import "pages/cards";
 @import "pages/profile";
 @import "pages/myresults";
+@import "pages/winners";
+@import "pages/settings";
