--- a/www/templates/categories.html
+++ b/www/templates/categories.html
@@ -1,6 +1,6 @@
 <ion-view view-title="YAAY or NAAY?" hide-back-button="true">
   <ion-nav-buttons side="left">
-    <button class="button button-icon button-clear ion-ios-gear-outline"></button>
+    <a class="button button-icon button-clear ion-ios-gear-outline" href="#/settings"></a>
   </ion-nav-buttons>
   <ion-content class="page page-categories">
     <ul class="photo-list is-category">
