change profile page

--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -8,7 +8,7 @@
     <div class="info">
       <img src="img/avatars/1.jpg" class="circle profile-pic">
       <div class="user-name">Max</div>
-      <a class="change-profile"><i class="fa fa-pencil"></i> Change profile</a>
+      <a class="change-profile" href="#/change-profile"><i class="fa fa-pencil"></i> Change profile</a>
     </div>
     
     <div class="list">
