--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1489,3 +1489,49 @@ ng-form {
   padding: 2em; }
   .page-toc p, .page-privacy p {
     margin-bottom: 1.5em; }
+
+.page-change-profile .delete-photo {
+  position: absolute;
+  top: 0px;
+  left: 50%;
+  margin-left: 30px;
+  font-size: 35px;
+  width: 35px;
+  height: 35px;
+  background: url(../img/icon_close.png) center center no-repeat;
+  background-size: contain; }
+.page-change-profile .photobox {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  margin: 30px auto;
+  text-align: center;
+  padding-top: 25px;
+  background-color: #b4b4b4;
+  position: relative;
+  overflow: hidden;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover; }
+  .page-change-profile .photobox .icon {
+    font-size: 40px; }
+  .page-change-profile .photobox label {
+    display: block;
+    font-size: 16px; }
+  .page-change-profile .photobox input[type=file] {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    opacity: 0px; }
+  .page-change-profile .photobox.photo-selected .icon, .page-change-profile .photobox.photo-selected label {
+    display: none; }
+.page-change-profile form .list .item {
+  font-size: 16px; }
+  .page-change-profile form .list .item input {
+    font-size: 16px; }
+.page-change-profile form .list .item-select {
+  min-height: 47px; }
+  .page-change-profile form .list .item-select em {
+    color: #b7b7b7; }
