--- a/www/templates/cards.html
+++ b/www/templates/cards.html
@@ -20,17 +20,17 @@
           <div class="no-text">YAAY <div class="left-arrow"></div></div>
           <div class="yes-text"><div class="right-arrow"></div> NAAY</div>
 
-          <a class="info" href="#/profile/{{card.profile.id}}">
+          <div class="info">
             <img class="circle avatar" ng-src="{{card.profile.avatar}}" />
-            <div class="user-info">
+            <a class="user-info" href="#/profile/{{card.profile.id}}">
               <div class="name">{{card.profile.name}}</div>
               <div class="counters">
                 <span class="space-right">{{card.profile.yaays}} YAAYs</span>
                 <span>{{card.profile.followers}} Follower</span>
               </div>
-            </div>
+            </a>
             <button class="button follow-button" ng-click="toggleFollow(card)" ng-class="{followed:card.followed}">{{card.followed?'Unfollow':'Follow'}}</button>
-          </a>
+          </div>
 
           <div class="comment">
             {{card.comment}}
@@ -44,13 +44,13 @@
     </div>
   </ion-content>
   <ion-footer-bar class="page-cards">
-    <div class="stats">
+    <a class="stats" href="#/myresults">
       <cup type="'bronze'" fill="0.5"></cup>
       <div class="counters">
         <div><em>{{myProfile.yaays | number}}</em> Ys</div>
         <div><em>{{myProfile.followers | number}}</em> Fs</div>
       </div>
-    </div>
+    </a>
     <button class="camera-button" ng-disabled="uploadDisabled" ng-click="onClickCamera()">
       <input type="file" id="profile_photo_r" onchange="onCardPhotoSelected(this)" accept="image/*" ng-if="!uploadDisabled">
       <i class="icon ion-ios-camera-outline"></i>
