--- a/www/templates/change-profile.html
+++ b/www/templates/change-profile.html
@@ -34,7 +34,7 @@
           <em ng-show="!findVal(genders, data.gender)">Gender</em>
         </div>
         <div class="item item-input">
-          <input type="date" ng-model="data.birthday" placeholder="Birth Date">
+          <input type="text" ng-model="data.birthday" placeholder="Birth Date">
         </div>
       </div>
     </form>
