--- a/www/templates/introduction.html
+++ b/www/templates/introduction.html
@@ -10,6 +10,6 @@
       </ion-slide>
     </ion-slide-box>
 
-    <a class="button btn-start button-green" href="#/categories">Let's Start</a>
+    <a class="button btn-start button-green" ng-href="#/{{fromSettings?'settings':'categories'}}">Let's Start</a>
   </ion-content>
 </ion-view>
