--- a/www/templates/settings-recommend.html
+++ b/www/templates/settings-recommend.html
@@ -1,6 +1,10 @@
-<ion-view view-title="Legal/Logout">
+<ion-view view-title="Recommend">
 
   <ion-content class="page page-settings-recommend">
+    
+    <div class="tip">
+      Type your SMS or Whatsapp-message for your friends here
+    </div>
     
     <textarea class="share-textbox">Here's the link to the Apple Store: XXX and to the Google Play Store: XXX.</textarea>
     
