--- a/www/templates/start.html
+++ b/www/templates/start.html
@@ -17,7 +17,7 @@
     </div>
     
     <div class="login-tip">
-      By logging in you confirm you have read and agree <a target="_system">Terms and Conditions</a> & <a target="_system">Privacy Policy</a>
+      By logging in you confirm you have read and agree <a href="#/toc">Terms and Conditions</a> & <a href="#/privacy">Privacy Policy</a>
     </div>
   </ion-content>
 </ion-view>
