--- a/scss/pages/_settings.scss
+++ b/scss/pages/_settings.scss
@@ -9,8 +9,10 @@
 }
 .page-settings{
   .info{
+    max-width: 250px;
+    display: block;
     text-align: center;
-    margin: 2.5em 0;
+    margin: 2.5em auto;
     .profile-pic{
       width: 5.5em;
       height: 5.5em; 
@@ -102,18 +104,23 @@
 }
 
 .page-settings-recommend{
+  .tip{
+    text-align: center;
+    font-size: 1.05em;
+    margin: 1em;
+    line-height: 1.3;
+  }
   .share-textbox{
     display: block;
     height: 160px;
-    width: 100%;
     padding: 1em;
+    width: 95%;
+    margin: 0.5em auto;
+    background-color: #eee;
     line-height: 1.5;
     font-size: 16px;
-    border-bottom: 1px solid #c8c7cc;
+    border: 1px solid #c8c7cc;
     margin-top: 10px;
-    @media all and (min-height: 700px){
-      height: 280px;
-    }
   }
   .shares{
     text-align: center;
@@ -171,7 +178,7 @@
     width: 35%;
     
     @media all and (min-height: 580px){
-      margin-top: 100px;
+      margin-top: 80px;
     }
   }
 }
