--- a/www/templates/full-picture-modal.html
+++ b/www/templates/full-picture-modal.html
@@ -1,19 +1,19 @@
 <ion-modal-view class="full-picture-modal" ng-controller="FullPictureModalCtrl">
   <ion-content scroll="false">
-    <div class="image" style="background-image: url({{service.picture.image}})" ng-click="service.close()">
+    <div class="image" style="background-image: url({{service.picture.image}})" ng-click="clickImage($event)">
       <div class="gradient gradient-top {{service.picture.color}}"></div>
       <div class="gradient gradient-bottom"></div>
-      <a class="info" href="#/profile/{{service.profile.id}}">
+      <div class="info" href="#/profile/{{service.profile.id}}">
         <img class="circle avatar" ng-src="{{service.profile.avatar}}" />
-        <div class="user-info">
+        <a class="user-info">
           <div class="name">{{service.profile.name}}</div>
           <div class="counters">
             <span class="space-right">{{service.profile.yaays}} YAAYs</span>
             <span>{{service.profile.followers}} Follower</span>
           </div>
-        </div>
+        </a>
         <button class="button follow-button" ng-click="toggleFollow()" ng-class="{followed:service.profile.followed}">{{service.profile.followed?'Unfollow':'Follow'}}</button>
-      </a>
+      </div>
 
       <div class="comment">
         {{service.picture.comment}}
