--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Login with email" hide-nav-bar="true">
+<ion-view view-title="" hide-nav-bar="true">
   <ion-content class="page page-login">
     <a href="#/start" class="back-link"><i class="icon ion-ios-arrow-thin-left"></i></a>
     
