--- a/www/templates/start.html
+++ b/www/templates/start.html
@@ -1,4 +1,4 @@
-<ion-view view-title="App Start" hide-nav-bar="true">
+<ion-view view-title="" hide-nav-bar="true">
   <ion-content class="page page-start">
     <div class="logo">
       <img src="img/logo.png">
